# TUTORIAL_CODE

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
FEMOS/lib/: libFEspace.dylib  libGeometry.dylib  libMesh.dylib
FEspace/: CMakeLists.txt  FEspace.cpp  FEspace.hpp  Makefile  Polynomial.hpp  cmake_install.cmake  libFEspace.dylib
FactoryQuad/: CMakeCache.txt  CMakeLists.txt  Makefile  QuadFactory.cpp  QuadFactory.hpp  cmake_install.cmake
Geometry/: .#Geometry.hpp  CMakeCache.txt  CMakeLists.txt  Geometry.cpp  Geometry.hpp  Makefile  Punto.cpp  Punto.hpp  PuntoDef.hpp  ShapeManage.hpp  TriangleDef.hpp  cmake_install.cmake  libGeometry.dylib
Include/: Factory.hpp  PolicyCreation.hpp  Proxy.hpp
Mesh/: CMakeLists.txt  Makefile  cmake_install.cmake  libMesh.dylib
Quadrature/: CMakeLists.txt  Makefile  NumericalQuad.cpp  NumericalQuad.hpp  Quadrature.cpp  Quadrature.hpp  cmake_install.cmake  libQuadrature.dylib
Quadrature1D/: CMakeCache.txt  CMakeLists.txt  Makefile  NumericalQuad.cpp  NumericalQuad.hpp  Quadrature1D.cpp  Quadrature1D.hpp  cmake_install.cmake
QuadratureRules/: CMakeLists.txt  Makefile  Quadrature.cpp  Quadrature.hpp  Quadrature1D.cpp  Quadrature1D.hpp  cmake_install.cmake
TestGeometry/: CMakeLists.txt  Makefile  Test.cpp  TestGeometry  cmake_install.cmake
TestQuad/: CMakeLists.txt  Makefile  TestQuad  cmake_install.cmake  test.cpp
TestQuad1D/: CMakeLists.txt  Errori.txt  Makefile  TestQuad1D  cmake_install.cmake  main.cpp
main1/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main1
